# stm32_blink

./: Cargo.toml  README.md  gdb_session.sh  openocd_flash.sh
.cargo/: config
src/: bmp280.rs  main.rs
